fixes bug 262183 "FFTrunk and Trunk crash [@ nsSHEntry::GetChildAt]" r=biesi sr=bzbarsky